# server

./: lsk_muduo && 叉车.md  lskmuduo结合叉车项目.docx  readme-lsk_muduo.docx  readme_lsk_muduo.md  ~$adme-lsk_muduo.docx  旧版muduo学习笔记.md
.VSCodeCounter/2026-01-14_19-20-07/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
Unix-Linux-Program/echo_server/echo_epoll/: server.cpp
Unix-Linux-Program/echo_server/echo_epoll_ET/: CMakeLists.txt  proactor_server.cpp  reactor_server.cpp
Unix-Linux-Program/echo_server/echo_perfect/: CMakeLists.txt
Unix-Linux-Program/echo_server/echo_select/: CMakeLists.txt  server.cpp
Unix-Linux-Program/echo_server/echo_simple/: CMakeLists.txt  server.cpp
Unix-Linux-Program/linux_study_book/: mutex_cv_demo  mutex_cv_demo.cpp  threadpool_demo  threadpool_demo.cpp
lsk_muduo/: .gitignore  Acceptor.cc  Acceptor.h  AsyncLogging.cc  AsyncLogging.h  Buffer.cc  Buffer.h  CMakeLists.txt  Channel.cc  Channel.h  Connector.cc  Connector.h  CurrentThread.cc  CurrentThread.h  DefaultPoller.cc  EPollPoller.cc  EPollPoller.h  EventLoop.cc  EventLoop.h  EventLoopThread.cc  EventLoopThread.h  EventLoopThreadPool.cc  EventLoopThreadPool.h  ITERATION2_DAY5-7_REPORT.md  ITERATION2_WEEK4_REPORT.md  InetAddress.cc  InetAddress.h  LogFile.cc  LogFile.h  LogStream.cc  LogStream.h  Logger.cc  Logger.h  Poller.h  README.md  Socket.cc  Socket.h  TcpClient.cc  TcpClient.h  TcpConnection.cc  (+19 more)
lsk_muduo/agv_server/: CMakeLists.txt  GatewayMain.cc
lsk_muduo/agv_server/codec/: CMakeLists.txt  LengthHeaderCodec.cc  LengthHeaderCodec.h
lsk_muduo/agv_server/gateway/: AgvSession.cc  AgvSession.h  CMakeLists.txt  ConcurrentMap.h  GatewayServer.cc  GatewayServer.h  LatencyMonitor.cc  LatencyMonitor.h  ProtobufDispatcher.h  SessionManager.cc  SessionManager.h  WorkerTask.h  gateway_main.cc
lsk_muduo/agv_server/proto/: CMakeLists.txt  common.pb.cc  common.pb.h  common.proto  message.pb.cc  message.pb.h  message.proto  message_id.h
lsk_muduo/agv_server/test/: CMakeLists.txt  GatewayTest.cc
lsk_muduo/muduo/base/: AsyncLogging.h  LogFile.cc  LogStream.cc  LogStream.h  Logger.cc  Logger.h  SpinLock.h  Thread.cc  Thread.h  Timestamp.cc  Timestamp.h  copyable.h  noncopyable.h
lsk_muduo/muduo/net/: Acceptor.cc  Acceptor.h  Buffer.cc  Buffer.h  Callbacks.h  Channel.cc  Channel.h  Connector.cc  Connector.h  DefaultPoller.cc  EPollPoller.cc  EPollPoller.h  EventLoop.cc  EventLoop.h  EventLoopThread.cc  EventLoopThread.h  EventLoopThreadPool.cc  EventLoopThreadPool.h  InetAddress.cc  InetAddress.h  Poller.cc  Poller.h  Socket.cc  Socket.h  TcpClient.cc  TcpClient.h  TcpConnection.cc  TcpConnection.h  TcpServer.cc  TcpServer.h  Timer.cc  Timer.h  TimerId.h  TimerQueue.cc  TimerQueue.h
lsk_muduo/test_muduo/: AgvClientMain.cc  BufferTest.cc  CMakeLists.txt  CodecTest.cc  ConcurrentMapTest.cc  DispatcherTest.cc  FastSlowSeparationTest.cc  HeartbeatTest.cc  MockAgvClient.cc  MockAgvClient.h  MockAgvClientTest.cc  MultiClientTest.cc  ProtoTest.cc  QuickVerifyTest.cc  SessionManagerTest.cc  WorkerTaskTest.cc  gateway_test.cc  generate_report.sh  muduo_server  muduo_server.cpp  run_all_tests.sh  start_multi_clients.sh  test_lsk_server.cc
lsk_muduo_readme/: lsk_muduo && 叉车.md  lsk_muduo-面试问答准备.md  readme_lsk_muduo.md
mymuduo/: EventLoopThread.cc  noncopyable.h
